[package]
name = "log_process_json"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
regex = "1.5"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0.130", features = ["derive"] }
cidr = "0.2.0"
signal-hook = "0.3.10"
